--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "react-dom": "15.4.2"
   },
   "devDependencies": {
+    "bootstrap": "^3.3.7",
     "react-redux": "^5.0.3",
-    "react-router": "^4.0.0",
+    "react-router": "^3.0.0",
     "react-scripts": "0.9.5",
     "redux": "^3.6.0"
   },
