--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "bootstrap": "^3.3.7",
+    "firebase": "^3.7.4",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.0",
     "react-scripts": "0.9.5",
