--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-redux": "^5.0.3",
     "react-router": "^3.0.0",
     "react-scripts": "0.9.5",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
