--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^3.7.4",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.0",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "0.9.5",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
